spacing bug

--- a/css/style.css
+++ b/css/style.css
@@ -656,7 +656,7 @@ Left Home
     width: 260px;
     background-image: url(../img/bradley.jpg);
     background-size: cover;
-    margin-top: 15%;
+    margin-top: 10em;
 }
 
 
